# rl-blackjack

./: .gitignore  Blackjack_RL.ipynb  README.md  pyproject.toml
c++/src/: main.cpp
output/: agent_data.pkl
python/src/: game.py  main.py  rl.py
src/: agent_data.pkl  game.py  main.py  rl.py
